k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: breadcrumbs
spec:
  selector:
    app: breadcrumbs
  ports:
    - port: 8080
      targetPort: 8080
